# CPP_Project_2019

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/data/: protocol.txt  save.json  setup.json  test.json
src/lagerung/: Article.h  ArticleType.h  Board.cpp  Board.h  Container.cpp  Container.h  Coordinates.cpp  Coordinates.h  FreeSpace.h  Queue.cpp  Queue.h  Robo.cpp  Robo.h  Shelf.cpp  Shelf.h  Size.h  StorageManager.cpp  StorageManager.h  TestEnvironment.cpp  TestEnvironment.h
src/setup/: Loaderton.cpp  Loaderton.h
